remove my deleted IAM User credential

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-awsAccesskey=AKIAX5E2BCRFADFN2XWY
-awsSecretkey=HhW3T4w32NL0N3XJ3zwPu68y038su43HtlioMSkK
+awsAccesskey='your aws access key Id'
+awsSecretkey='your aws sercret key'
