add loginAvailable controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-awsAccesskey='your aws access key Id'
-awsSecretkey='your aws sercret key'
+#awsAccesskey='your aws access key Id'
+#awsSecretkey='your aws sercret key'
